@@ -1431,10 +1431,6 @@ IceInternal::IncomingConnectionFactory::message(ThreadPoolCurrent& current)
             {
                 Warning out(_instance->initializationData().logger);
                 out << "connection exception:\n" << ex << '\n' << _acceptor->toString();
-#ifdef __GNUC__
-                out << "\n" << ex.ice_stackTrace();
-#endif
-
             }
             return;
         }
@@ -1460,9 +1456,6 @@ IceInternal::IncomingConnectionFactory::message(ThreadPoolCurrent& current)
             {
                 Warning out(_instance->initializationData().logger);
                 out << "connection exception:\n" << ex << '\n' << _acceptor->toString();
-#ifdef __GNUC__
-                out << "\n" << ex.ice_stackTrace();
-#endif
             }
             return;
         }
@@ -1537,9 +1530,6 @@ IceInternal::IncomingConnectionFactory::connectionStartFailed(const Ice::Connect
     {
         Warning out(_instance->initializationData().logger);
         out << "connection exception:\n" << ex << '\n' << _acceptor->toString();
-#ifdef __GNUC__
-        out << "\n" << ex.ice_stackTrace();
-#endif
     }
         
     //
