@@ -105,9 +105,6 @@ IceInternal::ConnectionMonitor::runTimerTask()
 
             Error out(_instance->initializationData().logger);
             out << "exception in connection monitor:\n" << ex;
-#ifdef __GNUC__
-            out << "\n" << ex.ice_stackTrace();
-#endif
         }
         catch(...)
         {
