@@ -8,7 +8,7 @@
 // **********************************************************************
 
 //
-// Generated by makeprops.py from file ./config/PropertyNames.xml, Tue Aug 11 09:12:32 2009
+// Generated by makeprops.py from file ../config/PropertyNames.xml, Fri Aug 21 15:32:18 2009
 
 // IMPORTANT: Do not edit this file -- any edits made here will be lost!
 
@@ -88,6 +88,7 @@ const IceInternal::Property IcePropsData[] =
     IceInternal::Property("Ice.PluginLoadOrder", false, 0),
     IceInternal::Property("Ice.PrintAdapterReady", false, 0),
     IceInternal::Property("Ice.PrintProcessId", false, 0),
+    IceInternal::Property("Ice.PrintStackTraces", false, 0),
     IceInternal::Property("Ice.ProgramName", false, 0),
     IceInternal::Property("Ice.RetryIntervals", false, 0),
     IceInternal::Property("Ice.ServerId", true, 0),
