@@ -8,7 +8,7 @@
 // **********************************************************************
 
 //
-// Generated by makeprops.py from file ./config/PropertyNames.xml, Tue Aug 11 09:12:32 2009
+// Generated by makeprops.py from file ../config/PropertyNames.xml, Fri Aug 21 15:32:18 2009
 
 // IMPORTANT: Do not edit this file -- any edits made here will be lost!
 
@@ -90,6 +90,7 @@ public final class PropertyNames
         new Property("Ice\\.PluginLoadOrder", false, null),
         new Property("Ice\\.PrintAdapterReady", false, null),
         new Property("Ice\\.PrintProcessId", false, null),
+        new Property("Ice\\.PrintStackTraces", false, null),
         new Property("Ice\\.ProgramName", false, null),
         new Property("Ice\\.RetryIntervals", false, null),
         new Property("Ice\\.ServerId", true, null),
